# doxia3

./: .gitignore  Cargo.toml  build.rs  makefile  sailfish.yml
layouts/: layout.html
src/: create_page.rs  domain.rs  in_memory.rs  list_pages.rs  main.rs
templates/: aah.html
