[package]
name = "doxia"
version = "0.1.0"
authors = ["Samuel Doiron <sam.doiron96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sailfish = "0.3.0"

[build-dependencies]
sailfish = "0.3.0"

[dependencies.tera]
version = "1"
default-features = false
