[package]
name = "doxia"
version = "0.1.0"
authors = ["Samuel Doiron <sam.doiron96@gmail.com>", "Sabrina Gannon <sabrinagannon@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
sailfish = "0.3.0"
anyhow = "1.0.0"

[build-dependencies]
sailfish = "0.3.0"

[dev-dependencies]
cargo-watch = "7.5.0"

[dependencies.tera]
version = "1"
default-features = false
